@@ -1,79 +1,93 @@
+
 package searchengine.controllers;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import searchengine.config.SitesList;
+import searchengine.dto.responses.NotOkResponse;
+import searchengine.dto.responses.OkResponse;
 import searchengine.dto.statistics.StatisticsResponse;
-import searchengine.services.IndexingService;
-import searchengine.services.SearchResults;
+import searchengine.model.SitePage;
+import searchengine.services.ApiService;
 import searchengine.services.SearchService;
 import searchengine.services.StatisticsService;
 
-import java.util.Map;
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 @RestController
 @RequestMapping("/api")
 @RequiredArgsConstructor
 public class ApiController {
-
-    private final StatisticsService statisticsService;
-    private final IndexingService indexingService;
     private final SearchService searchService;
-
-    private ResponseEntity<Map<String, Object>> createErrorResponse(String errorMessage, HttpStatus status) {
-        return ResponseEntity.status(status).body(Map.of("result", false, "error", errorMessage));
-    }
+    private final StatisticsService statisticsService;
+    private final ApiService apiService;
+    private final AtomicBoolean indexingProcessing = new AtomicBoolean(false);
+    private final SitesList sitesList;
+    private final ExecutorService executor = Executors.newSingleThreadExecutor();
 
     @GetMapping("/statistics")
-    public ResponseEntity<StatisticsResponse> statistics() {
+    public ResponseEntity<StatisticsResponse> statistics() throws MalformedURLException {
         return ResponseEntity.ok(statisticsService.getStatistics());
     }
 
     @GetMapping("/startIndexing")
-    public ResponseEntity<Map<String, Object>> startIndexing() {
-        if (indexingService.isIndexing()) {
-            return createErrorResponse("Индексация уже запущена", HttpStatus.BAD_REQUEST);
+    public ResponseEntity startIndexing() {
+        if (indexingProcessing.get()) {
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(new NotOkResponse("Индексация уже запущена"));
+        } else {
+            executor.submit(() -> {
+                indexingProcessing.set(true);
+                apiService.startIndexing(indexingProcessing);
+            });
+            return ResponseEntity.status(HttpStatus.OK).body(new OkResponse());
         }
-        boolean success = indexingService.startIndexing();
-        return success ? ResponseEntity.ok(Map.of("result", true)) : createErrorResponse("Ошибка при запуске индексации", HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     @GetMapping("/stopIndexing")
-    public ResponseEntity<Map<String, Object>> stopIndexing() {
-        if (!indexingService.isIndexing()) {
-            return createErrorResponse("Индексация не запущена", HttpStatus.BAD_REQUEST);
+    public ResponseEntity stopIndexing() {
+        if (!indexingProcessing.get()) {
+            return ResponseEntity.status(HttpStatus.METHOD_NOT_ALLOWED).body(new NotOkResponse("Индексация не запущена"));
+        } else {
+            indexingProcessing.set(false);
+            return ResponseEntity.status(HttpStatus.OK).body(new OkResponse());
         }
-        boolean success = indexingService.stopIndexing();
-        return success ? ResponseEntity.ok(Map.of("result", true)) : createErrorResponse("Ошибка при остановке индексации", HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     @PostMapping("/indexPage")
-    public ResponseEntity<Map<String, Object>> indexPage(@RequestParam String url) {
-        if (!indexingService.isValidUrl(url)) {
-            return createErrorResponse("Данная страница находится за пределами сайтов, указанных в конфигурационном файле", HttpStatus.BAD_REQUEST);
+    public ResponseEntity indexPage(@RequestParam String url) throws IOException {
+        URL refUrl = new URL(url);
+        SitePage sitePage = new SitePage();
+        try {
+            sitesList.getSites().stream().filter(site -> refUrl.getHost().equals(site.getUrl().getHost())).findFirst().map(site -> {
+                sitePage.setName(site.getName());
+                sitePage.setUrl(site.getUrl().toString());
+                return sitePage;
+            }).orElseThrow();
+        } catch (RuntimeException ex) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).
+                    body(new NotOkResponse("Данная страница находится за пределами сайтов указанных в конфигурационном файле"));
         }
-        boolean success = indexingService.indexPage(url);
-        return success ? ResponseEntity.ok(Map.of("result", true)) : createErrorResponse("Ошибка при индексации страницы", HttpStatus.INTERNAL_SERVER_ERROR);
+        apiService.refreshPage(sitePage, refUrl);
+        return ResponseEntity.status(HttpStatus.OK).body(new OkResponse());
     }
 
     @GetMapping("/search")
-    public ResponseEntity<Map<String, Object>> search(
+    public ResponseEntity<Object> search(
             @RequestParam(required = false) String query,
             @RequestParam(required = false) String site,
-            @RequestParam(defaultValue = "0") int offset,
-            @RequestParam(defaultValue = "20") int limit) {
-        if (query == null || query.trim().isEmpty()) {
-            return createErrorResponse("Задан пустой поисковый запрос", HttpStatus.BAD_REQUEST);
+            @RequestParam(required = false, defaultValue = "0") Integer offset,
+            @RequestParam(required = false, defaultValue = "20") Integer limit
+    ) throws IOException {
+        if (query == null || query.isBlank()) {
+            return ResponseEntity.badRequest().body(new NotOkResponse("Задан пустой поисковый запрос"));
         }
-        try {
-            SearchResults results = searchService.search(query, site, offset, limit);
-            if (results == null) {
-                return createErrorResponse("Ошибка при выполнении поиска", HttpStatus.INTERNAL_SERVER_ERROR);
-            }
-            return ResponseEntity.ok(Map.of("result", true, "count", results.getTotalCount(), "data", results.getData()));
-        } catch (Exception e) {
-            return createErrorResponse("Внутренняя ошибка сервера при поиске", HttpStatus.INTERNAL_SERVER_ERROR);
-        }
+        return searchService.search(query, site, offset, limit);
     }
 }
